--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BomBa--toDo-list</title>
+    
+    <link rel="stylesheet" href="./css/style.scss">
+    <link rel="shortcut icon" href="./iamgs/favicon.svg" type="image/x-icon">
+    <title>BomBa | toDo-list</title>
 </head>
 <body>
     <div class="app">
-        <main class="contenier">
-            
+        <main class="container">
+            <h1>BomBa</h1>
         </main>
     </div>
+    <script src="./js/main.js"></script>
 </body>
 </html>
