--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="app">
         <main class="container">
-            <h1>BomBa</h1>
+            <h1>hussein apdo</h1>
         </main>
     </div>
     <script src="./js/main.js"></script>
