--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="app">
         <main class="container">
             <h1>hussein apdo</h1>
+            <h1>hussein apdo</h1>
         </main>
     </div>
     <script src="./js/main.js"></script>
